--- a/macros/estructura-ejercicios.tex
+++ b/macros/estructura-ejercicios.tex
@@ -12,8 +12,7 @@
 \subsubsection*{Ejercicios de la guía:}
 
 \foreach \x in {1,...,\cantidadEjerciciosGuia} { % cantidad de ejercicios de la guía
-		\input{./ejercicios-\guia/ej-\x-\guia.tex}
-	}
+		\input{./ejercicios-\guia/ej-\x-\guia.tex} }
 
 \newpage % página nueva
 
