--- a/2-guia/ejercicios-2-extra/ej-extra-3-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-3-2.tex
@@ -1,15 +1,13 @@
-\ejExtra
-
 %Macro local
-\def\h{\magenta{h}}
+\def\h{\magenta h}
 
-
+\begin{enunciado}{\ejExtra}
 Probar que
 $$
-  \sumatoria{k = 1}{n} (2k-1)^2 \geq \frac{(2n-1)^3}{6} \quad \paratodo n \en \naturales.
+  \sumatoria{k = 1}{n} (2k-1)^2 \geq \frac{(2n-1)^3}{6} \quad
+        \paratodo n \en \naturales.
 $$
-
-\separadorCorto
+\end{enunciado}
 
 Ejercicio de inducción. Voy a probar que la preposición
 $
