--- a/2-guia/ejercicios-2/ej-10-2.tex
+++ b/2-guia/ejercicios-2/ej-10-2.tex
@@ -5,7 +5,7 @@
       \item $3^n + 5^n \leq 2^{n+2}$
       \item $3^n \leq n^3$
       \item $ \sumatoria{i=1}{n} \frac{n+i}{i+1} \leq 1 + n(n-1)$
-      \item $ \sumatoria{i=1}{2n} \frac{i}{2^i} \leq n$
+      \item $ \sumatoria{i=n}{2n} \frac{i}{2^i} \leq n$
       \item $ \sumatoria{i=1}{2^n} \frac{1}{2i-1} > \frac{n+3}{4}$
       \item $ \sumatoria{i=1}{n} \frac{1}{i!} \leq 2 - \frac{1}{2^{n-1}}$
       \item $ \productoria{i=1}{n} \frac{4i-1}{n+i} \geq 1$
