15 terminado y sigue arreglando quilombos

--- a/2-guia/ejercicios-2/ej-1-2.tex
+++ b/2-guia/ejercicios-2/ej-1-2.tex
@@ -4,7 +4,7 @@
           \begin{multicols}{2}
             \begin{enumerate}[label=\alph*)]
               \item  $1 + 2 + 3 + 4 + \dots + 100$
-              \item\label{referenciaAlItem:1-2}  $1 + 2 + 4 + 8 + 16 + \dots + 1024$
+              \item  $1 + 2 + 4 + 8 + 16 + \dots + 1024$
               \item  $1 + (-4) + 9 + (-16) + 25 + \dots + (-144)$
               \item $1 + 9 + 25 + 49 + \dots + 441$
               \item $1 + 3 + 5 + \dots + (2n + 1)$
@@ -19,7 +19,7 @@
 Lo que queremos hacer es compactar la suma para evitar el uso
 de puntos suspensivos, la notación ideal para esos casos es el símbolo de sumatoria.
 El primer paso es fijarse en el comportamiento de cada término de
-nuesta suma. Por ejemplo, en el punto \ref{referenciaAlItem:1-2} notamos que cada término comienza a
+nuesta suma. Por ejemplo, en el punto \ref{ej1-2:item:i:b} notamos que cada término comienza a
 duplicarse.
 
 \begin{enumerate}[label=\roman*)]
@@ -29,7 +29,7 @@ duplicarse.
                   1 + 2 + 3 + 4 + \dots + 100 =
                   \sumatoria{i=1}{100}i
                 $
-          \item\label{referenciaAlItem:1-2}
+          \item\label{ej1-2:item:i:b}
                 $
                   1 + 2 + 4 + 8 + 16 + \dots + 1024 =
                   \sumatoria{i=0}{10}2^i
