--- a/2-guia/ejercicios-2/ej-14-2.tex
+++ b/2-guia/ejercicios-2/ej-14-2.tex
@@ -9,11 +9,8 @@
 \end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-
-\item La cantidad de diagonales de un polígono de $n$ lados es $\frac{n(n-3)}{2}$.\\
-\begin{enumerate}[label=\roman*)]
-  \item La cantidad de diagonales de un polígono de $n$ lados es $\frac{n(n-3)}{2}$.\\
-        Ejercicio donde hay que encontrar una fórmula a partir de algún método \textit{creativo} para luego probar por inducción.\\
+  \item La cantidad de diagonales de un polígono de $n$ lados es $\frac{n(n-3)}{2}$.\par
+        Ejercicio donde hay que encontrar una fórmula a partir de algún método \textit{creativo} para luego probar por inducción.\par
         \begin{tikzpicture}[scale=0.9]
           \coordinate (n) at (0,0);
           \coordinate (1) at (2,0);
