--- a/2-guia/ejercicios-2/ej-3-2.tex
+++ b/2-guia/ejercicios-2/ej-3-2.tex
@@ -9,7 +9,7 @@
 \end{enunciado}
 
 Para resolver estos ejercicios haremos uso la notas teóricas, en particular
-\ref{refPropSumatoria-Productoria} y \ref{refSumaGauss}.
+\ref{2-teoria:suma-prod} y \ref{2-teoria:suma-gauss}.
 
 \begin{enumerate}[label=\roman*)]
   \item
@@ -18,13 +18,13 @@ Para resolver estos ejercicios haremos uso la notas teóricas, en particular
           = (4 \cdot \sumatoria{i=1}{n} i) + n
           = 4 \cdot \frac{n(n+1)}{2} + n
           = \boxed{2n^2 + 3n}
-        $\\
+        $\par
 
   \item
         $ \sumatoria{i=6}{n} 2(i-5)
           = 2 \cdot \sumatoria{i=6}{n} (i - 5)
           = 2 \cdot [(\sumatoria{i=6}{n} i) - (\sumatoria{i=6}{n} 5)]
-          = 2 \cdot [(\sumatoria{i=0}{n} i) - (\sumatoria{i=0}{5} i) - 5(n-5)]\\\\
+          = 2 \cdot [(\sumatoria{i=0}{n} i) - (\sumatoria{i=0}{5} i) - 5(n-5)]\\
           = 2 \cdot (\frac{n(n+1)}{2} - \frac{5(5+1)}{2} - 5n + 25)
           = 2 \cdot (\frac{n(n+1)}{2} - 5n + 10)
           = n(n+1) - 10n + 20
