--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -67,28 +67,69 @@
         $
 
   \item
-        $\productoria{i=1}{n} \frac{n+i}{2i-3} = 2^n (1 -2n)$\\
-        En este ejercicio conviene abrir la productoria y acomodar los factores. Por inducción:\\
-        $\llave{l}{
-            p(n):\ \productoria{i=1}{n} \frac{n+i}{2i-3} = 2^n (1 -2n)  \\
-            \textit{Caso Base: } p(1) \text{ V?} \to \productoria{i=1}{1} \frac{1+i}{2i-3} = \frac{1+1}{2 \cdot 1 - 3} = 2^1 (1 - 2\cdot 1) = -2\\
-            \textit{Paso inductivo: Supongo } p(k) \text{ Verdadero } \flecha{quiero ver}[que] p(k+1) \text{ Verdadero para algún } k \en \naturales.\\
-            \textit{Hipótesis inductiva: Supongo } \productoria{i=1}{k} \frac{k+i}{2i-3} = 2^k (1 -2k), \qvq   \productoria{i=1}{k+1} \frac{k+1+i}{2i-3} = 2^{k+1} (1 -2(k+1))\\
+        $\productoria{i=1}{n} \frac{n+i}{2i-3} = 2^n (1 -2n)$\par
+        En este ejercicio conviene abrir la productoria y acomodar los factores. Por inducción:\par
+        $$
+          p(n):\ \productoria{i=1}{n} \frac{n+i}{2i-3} = 2^n (1 -2n)
+        $$
 
-            \llave{l}{
-              \productoria{i=1}{k} \frac{k+i}{2i-3} = \frac{k+1}{2 \cdot 1 - 3} \cdot \frac{k+2}{2 \cdot 2 - 3} \cdot \frac{k+3}{2 \cdot 3 - 3} \cdots \frac{2k}{2 \cdot k - 3} = 2^k(1 - 2k)\\
-              \productoria{i=1}{k+1} \frac{k+1+i}{2i-3} = \frac{k+2}{2 \cdot 1 - 3} \cdot \frac{k+3}{2 \cdot 2 - 3} \cdots \frac{k+1 + (k-1)}{2(k-1) - 3} \cdot \frac{k+1 + k}{2k - 3}\cdot \frac{k+1 + (k+1)}{2(k + 1) - 3} \\
-              \flecha{Masajear: multiplico por $1 = \frac{\cyan{k+1}}{\cyan{k+1}}$}[corro los denominadores una fracción hacia $\leftarrow$]
-              \frac{\cyan{k+1}}{\cyan{k+1}} \cdot \frac{1}{2 \cdot 1 - 3} \cdot \frac{k+2}{2 \cdot 2 - 3} \cdot \frac{k + 3}{2 \cdot 3 - 3} \cdots \frac{2 k}{2k - 3} \cdot \frac{2k + 1}{2(k+1) - 3}  \cdot \frac{2k+2}{1} = \\
-              \flecha{acomodo para que}[aparezca la HI]
-              \HI{
-                \textstyle \frac{\cyan{k+1}}{2 \cdot 1 - 3} \cdot \frac{k+2}{2 \cdot 2 - 3} \cdot \frac{k + 3}{2 \cdot 3 - 3} \cdots \frac{2 k}{2k - 3} \cdot \frac{2k + 1}{2(k+1) - 3}
-              }  \cdot \frac{2k+2}{\cyan{k+1}} =\\
-              = 2^k (1 -2k) \cdot \frac{2k + 1}{2(k+1) - 3}  \cdot \frac{2k+2}{\cyan{k+1}} = 2^k \cancel{(1 - 2k)} \cdot \frac{2k + 1}{(-1)\cancel{(1 - 2k)}}  \cdot \frac{2\cancel{(k + 1)}}{\cancel{\cyan{k + 1}}} = 2^{k+1}(-1)(2k + 1)=\\
-              = 2^{k+1} \parentesis{1 - 2(k+1)} \Tilde
+        \textit{Caso Base: }
+        $$
+          p(1) : \productoria{i=1}{1} \frac{1+i}{2i-3} = \frac{1+1}{2 \cdot 1 - 3} = 2^1 (1 - 2\cdot 1) = -2
+        $$
 
-            }
-          }$
-        Como $p(1)$ es verdadero y $p(k)$ es verdadero y $p(k+1)$ también lo es, por el principio de inducción $p(n)$ es verdadera $\paratodo n\en \naturales $
+        \textit{Paso inductivo: }
+        $$
+          \begin{array}{c}
+            p(\blue{k}): \ob{\productoria{i=1}{\blue{k}} \frac{\blue{k}+i}{2i-3} = 2^{\blue{k}} (1 -2\blue{k})}{\purple{\text{hipótesis inductiva}}}
+            \text{ asumo verdadera para algún }\blue{k} \en \naturales \\
+            \flecha{quiero}[ver que] p(\blue{k}+1): \productoria{i=1}{\blue{k}+1} \frac{\blue{k}+1+i}{2i-3} = 2^{\blue{k}+1} (1 -2(\blue{k}+1)
+            \text{ también lo sea para algún } \blue{k} \en \naturales.
+          \end{array}
+        $$
+        \textit{Nota que puede ser de utilidad:}
+        Esta productoria tiene a la $n$ en el término general. Cuando pasa esto en el ejercicio, abrir la sumatoria
+        para acomodar los factores y así formar la HI, suele ser el camino a seguir.
+        \textit{Fin nota que puede ser de utilidad}
+
+        $$
+          \begin{array}{l}
+            \productoria{i=1}{k} \frac{k+i}{2i-3} =
+            \frac{k+1}{2 \cdot 1 - 3} \cdot \frac{k+2}{2 \cdot 2 - 3} \cdot \frac{k+3}{2 \cdot 3 - 3} \cdots \frac{2k}{2 \cdot k - 3} =
+            \purple{2^k(1 - 2k)} \\
+
+            \productoria{i=1}{k+1} \frac{k+1+i}{2i-3} =
+            \frac{\red{k+2}}{\red{2 \cdot 1 - 3}} \cdot
+            \frac{k+3}{2 \cdot 2 - 3} \cdots
+            \frac{k+1 + (k-1)}{2(k-1) - 3} \cdot
+            \frac{k+1 + k}{2k - 3} \cdot
+            \frac{\ob{\scriptstyle k+1 + (k+1)}{\red{2k+2}}}{\red{2(k + 1) - 3}}
+            \igual{$\llamada1$}
+            \frac{1}{\red{2 \cdot 1 - 3}} \cdot
+            \frac{\red{k+2}}{2 \cdot 2 - 3} \cdot
+            \frac{k + 3}{2 \cdot 3 - 3} \cdots
+            \frac{2 k}{2k - 3} \cdot
+            \frac{2k + 1}{\red{2(k+1) - 3}}  \cdot
+            \frac{\red{2k+2}}{1} \\
+            \igual{$\llamada2$}
+            \ub{
+              \frac{\cyan{k+1}}{2 \cdot 1 - 3} \cdot
+              \frac{k+2}{2 \cdot 2 - 3} \cdot
+              \frac{k + 3}{2 \cdot 3 - 3} \cdots \frac{2 k}{2k - 3}}{\purple{\text{hipótesis inductiva}} } \cdot \frac{2k + 1}{2(k+1) - 3}
+            \cdot \frac{2k+2}{\cyan{k+1}}
+            \igual{\purple{HI}}
+            \purple{2^k (1 - 2k)}\cdot \frac{2k + 1}{2(k+1) - 3} \cdot \frac{2k+2}{k+1}
+            \igual{\red{!}}
+            2^{k+1} (1 - 2(k+1)) \Tilde
+          \end{array}
+        $$
+
+        En $\llamada1$ Corro los denominadores un lugar hacia la izquierda. Pinto con \red{rojo}
+        las fracciones de los bordes solo para ayuda visual.\par
+        En $\llamada2$ multiplico por $1 = \cyan{\frac{k+1}{k+1}}$ y lo ubico en los lugares
+        \textit{apropiados} para que me aparezca la \purple{hipótesis inductiva}.\par
+        Si te preguntás qué pasó en "\red{!}", eso son cuentas, \textit{simplificá}, \textit{factorzá} y yo
+        que sé, que te dejo a vos, por mi parte yo \href{https://github.com/nad-garraz/algebraUno}{\Large\faIcon{hands-wash}}.\medskip
+
+        Como $p(1),\, p(k) \ytext p(k+1)$ son verdaderas por el principio de inducción $p(n)$ es verdadera $\paratodo n \en \naturales$.
 \end{enumerate}
-
