--- a/2-guia/ejercicios-2/ej-9-2.tex
+++ b/2-guia/ejercicios-2/ej-9-2.tex
@@ -1,101 +1,100 @@
-\ejercicio
-% MACROS USADOS LOCALMENTE
-\def\suma1n{\sumatoria{i = 1}{n}}
-\def\paraAlinear{\text{\phantom{$ \suma1n \frac{1}{(2i-1)(2i+1)}$}}\overset{\phantom{Aux.1}}{=}}
-% FIN MACROS USADOS LOCALMENTE
+\begin{enunciado}{\ejercicio}
+  \begin{enumerate}[label=\roman*)]
+    \item Sea $(a_n)_{n \en \naturales }$ una sucesión de números reales.
+          Probar que $ \sumatoria{1}{n} (a_{i+1} - a_i) = a_{n+1} - a_1$.
 
+    \item Calcular $ \sumatoria{1}{n} \frac{1}{i(i+1)}$ \quad (Sugerencia: $ \frac{1}{i(i+1)} = \frac{1}{i} - \frac{1}{i+1}$).
 
-\begin{enumerate}[label=\roman*)]
-	\item Sea $(a_n)_{n \en \naturales }$ una sucesión de números reales.
-	      Probar que $ \suma1n(a_{i+1} - a_i) = a_{n+1} - a_1$.
-
-	\item Calcular $ \suma1n \frac{1}{i(i+1)}$ \quad (Sugerencia: $ \frac{1}{i(i+1)} = \frac{1}{i} - \frac{1}{i+1}$).
-
-	\item Calcular $ \suma1n\frac{1}{(2i-1)(2i+1)}$ \quad (Sugerencia: calcular $ \frac{1}{2i-1} - \frac{1}{2i+1}$).
-\end{enumerate}
+    \item Calcular $ \sumatoria{1}{n} \frac{1}{(2i-1)(2i+1)}$ \quad (Sugerencia: calcular $ \frac{1}{2i-1} - \frac{1}{2i+1}$).
+  \end{enumerate}
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
 
-	\item Sea $(a_n)_{n \en \naturales }$ una sucesión de números reales. Sea $n \en \naturales $ y
-	      \begin{align*}
-		      P(n): \suma1n(a_{i+1} - a_i) = a_{n+1} - a_1
-	      \end{align*}
-	      \begin{enumerate}[label=\arabic*)]
+  \item Sea $(a_n)_{n \en \naturales }$ una sucesión de números reales. Sea $n \en \naturales $ y
+        \begin{align*}
+          P(n): \sumatoria{1}{n} (a_{i+1} - a_i) = a_{n+1} - a_1
+        \end{align*}
+        \begin{enumerate}[label=\arabic*)]
 
-		      \item Caso base, $ n = 1$:
-		            \begin{align*}
-			            P(1): & \sumatoria{i = 1}{1} (a_{i+1} - a_i) = a_{1+1} - a_1 \\
-			            P(1): & \ a_2 - a_1 = a_2 - a_1                              \\
-			            P(1): & \ V
-		            \end{align*}
+          \item Caso base, $ n = 1$:
+                \begin{align*}
+                  P(1): & \sumatoria{i = 1}{1} (a_{i+1} - a_i) = a_{1+1} - a_1 \\
+                  P(1): & \ a_2 - a_1 = a_2 - a_1                              \\
+                  P(1): & \ V
+                \end{align*}
 
-		      \item Paso inductivo. Sea $n \en \naturales $:
-		            \begin{enumerate}
-			            \item[HI.] $P(n): \ V$
-			            \item[TI.] $ P(n+1):  \sumatoria{i=1}{n+1} (a_{i+1} - a_i) = a_{n+2} - a_1 $
-		            \end{enumerate}
-		            Desarrollo la TI:
-		            \begin{align*}
-			            P(n+1): & \sumatoria{i=1}{n+1} (a_{i+1} - a_i) =
-                            a_{n+2} - a_{n+1} + \suma1n(a_{i+1} - a_i) \igual{HI} a_{n+2} - a_{n+1} + a_{n+1} - a_1 \\
-			            P(n+1): & \sumatoria{i=1}{n+1}(a_{i+1} - a_i) = a_{n+2} - a_1                                \\
-			            P(n+1): & \ V
-		            \end{align*}
-	      \end{enumerate}
+          \item Paso inductivo. Sea $n \en \naturales $:
+                \begin{enumerate}
+                  \item[HI.] $P(n): \ V$
+                  \item[TI.] $ P(n+1):  \sumatoria{i=1}{n+1} (a_{i+1} - a_i) = a_{n+2} - a_1 $
+                \end{enumerate}
+                Desarrollo la TI:
+                \begin{align*}
+                  P(n+1): & \sumatoria{i=1}{n+1} (a_{i+1} - a_i) =
+                  a_{n+2} - a_{n+1} + \sumatoria{1}{n} (a_{i+1} - a_i) \igual{HI} a_{n+2} - a_{n+1} + a_{n+1} - a_1 \\
+                  P(n+1): & \sumatoria{i=1}{n+1}(a_{i+1} - a_i) = a_{n+2} - a_1                                     \\
+                  P(n+1): & \ V
+                \end{align*}
+        \end{enumerate}
 
-	      Tenemos que
-	      \begin{align*}
-		      P(1): & \ V                   \\
-		      P(n): & \ V \implies P(n+1):V
-	      \end{align*}
-	      y esto implica que $P(n): V \ \paratodo n \en \naturales $.
+        Tenemos que
+        \begin{align*}
+          P(1): & \ V                   \\
+          P(n): & \ V \implies P(n+1):V
+        \end{align*}
+        y esto implica que $P(n): V \ \paratodo n \en \naturales $.
 
-	\item $\suma1n \frac{1}{i ( i + 1 )} =
-	      \suma1n (\frac{1}{i}- \frac{1}{i+1}) =
-	      - \suma1n (\frac{1}{i+1} - \frac{1}{i} ) \igual{Aux}
-	      - (\frac{1}{n+1}-\frac{1}{1}) \\$
+  \item $\sumatoria{1}{n} \frac{1}{i ( i + 1 )} =
+        \sumatoria{1}{n} (\frac{1}{i}- \frac{1}{i+1}) =
+        - \sumatoria{1}{n} (\frac{1}{i+1} - \frac{1}{i} ) \igual{Aux}
+        - (\frac{1}{n+1}-\frac{1}{1}) \\$
 
-	      $ \text{\phantom{$ \suma1n \frac{1}{i(i+1)}$}}  =
-		      - (\frac{1-(n+1)}{n+1}) = - (\frac{-n}{n+1}) = \frac{n}{n+1}$
-	      \subsubsection*{Auxiliar}
-	      Sea $ a_n = \frac{1}{n}$, donde $n \en \naturales $. Queremos calcular $ \suma1n \left(\frac{1}{i+1} - \frac{1}{i}\right)$.
-	      \begin{align*}
-		      \suma1n \left( \frac{1}{i+1} - \frac{1}{i}\right) =  \suma1n \left(a_{i+1}- a_i \right) \overset{9.i)}{=} a_{n+1} - a_1 = \frac{1}{n+1} - \frac{1}{1}
-	      \end{align*}
+        $ \text{\phantom{$ \sumatoria{1}{n} \frac{1}{i(i+1)}$}}  =
+          - (\frac{1-(n+1)}{n+1}) = - (\frac{-n}{n+1}) = \frac{n}{n+1}$
+        \subsubsection*{Auxiliar}
+        Sea $ a_n = \frac{1}{n}$, donde $n \en \naturales $. Queremos calcular $ \sumatoria{1}{n} \left(\frac{1}{i+1} - \frac{1}{i}\right)$.
+        \begin{align*}
+          \sumatoria{1}{n} \left( \frac{1}{i+1} - \frac{1}{i}\right) =  \sumatoria{1}{n} \left(a_{i+1}- a_i \right) \overset{9.i)}{=} a_{n+1} - a_1 = \frac{1}{n+1} - \frac{1}{1}
+        \end{align*}
 
-	\item $ \suma1n \frac{1}{(2i-1)(2i+1)} \overset{Aux.1}{=}
-		      \suma1n\frac{1}{2} (\frac{1}{2i-1} - \frac{1}{2i+1} ) =
-		      \frac{1}{2} \suma1n (\frac{1}{2i-1} - \frac{1}{2i+1-2+2} ) \\
-		      \paraAlinear
-		      \frac{1}{2} \suma1n(\frac{1}{2i-1} - \frac{1}{2i+2-2+1} ) =
-		      \frac{1}{2} \suma1n(\frac{1}{2i-1} - \frac{1}{2(i+1)-2+1} ) \\
-		      \paraAlinear
-		      \frac{1}{2} \suma1n(\frac{1}{2i-1} - \frac{1}{2(i+1)-1} ) =
-		      \frac{1}{2} \suma1n-(\frac{1}{2(i+1)-1} - \frac{1}{2i-1} ) \\
-		      \paraAlinear
-		      -\frac{1}{2} \suma1n(\frac{1}{2(i+1)-1} - \frac{1}{2i-1} ) \overset{Aux.2}{=}
-		      -\frac{1}{2}(\frac{1}{2(n + 1)-1} -\frac{1}{2\cdot 1-1} ) \\
-		      \paraAlinear
-		      -\frac{1}{2}(\frac{1}{2n + 1} - 1 ) =
-		      -\frac{1}{2}(\frac{1-(2n + 1)}{2n + 1} ) =
-		      -\frac{1}{2}(\frac{-2n}{2n + 1} ) \\
-		      \paraAlinear
-		      \frac{n}{2n+1}$
+  \item
 
-	      \subsubsection*{Auxiliar 1}
-	      Calculamos la sugerencia dada
-	      \begin{align*}
-		      \frac{1}{2i-1} - \frac{1}{2i+1} & = \frac{2i+1 - (2i-1)}{(2i-1)(2i+1)} = \frac{2i+1 - 2i+1}{(2i-1)(2i+1)}= \frac{2}{(2i-1)(2i+1)} \\
-		      \frac{2}{(2i-1)(2i+1)}          & = \frac{1}{2i-1} - \frac{1}{2i+1}                                                               \\
-		      \frac{1}{(2i-1)(2i+1)}          & = \frac{1}{2} \left( \frac{1}{2i-1} - \frac{1}{2i+1} \right)
-	      \end{align*}
+        $\begin{array}{lll}
+            \sumatoria{1}{n} \frac{1}{(2i-1)(2i+1)}
+             & \igual{Aux.1}
+             & \sumatoria{1}{n} \frac{1}{2} (\frac{1}{2i-1} - \frac{1}{2i+1} ) =
+            \frac{1}{2} \sumatoria{1}{n} (\frac{1}{2i-1} - \frac{1}{2i+1-2+2} )                   \\
+             & =                                                                 &
+            \frac{1}{2} \sumatoria{1}{n} (\frac{1}{2i-1} - \frac{1}{2i+2-2+1} ) =
+            \frac{1}{2} \sumatoria{1}{n} (\frac{1}{2i-1} - \frac{1}{2(i+1)-2+1} )                 \\
+             & =                                                                 &
+            \frac{1}{2} \sumatoria{1}{n} (\frac{1}{2i-1} - \frac{1}{2(i+1)-1} ) =
+            \frac{1}{2} \sumatoria{1}{n} -(\frac{1}{2(i+1)-1} - \frac{1}{2i-1} )                  \\
+             & =                                                                 &
+            -\frac{1}{2} \sumatoria{1}{n} (\frac{1}{2(i+1)-1} - \frac{1}{2i-1} ) \overset{Aux.2}{=}
+            -\frac{1}{2}(\frac{1}{2(n + 1)-1} -\frac{1}{2\cdot 1-1} )                             \\
+             & =                                                                 &
+            -\frac{1}{2}(\frac{1}{2n + 1} - 1 ) =
+            -\frac{1}{2}(\frac{1-(2n + 1)}{2n + 1} ) =
+            -\frac{1}{2}(\frac{-2n}{2n + 1} )                                                     \\
+             & =                                                                 & \frac{n}{2n+1}
+          \end{array}$
 
-	      \subsubsection*{Auxiliar 2}
-	      Sea $ a_n = \frac{1}{2n-1}$, donde $n \en \naturales $. Queremos calcular $ \suma1n \left(\frac{1}{2(i+1)-1} - \frac{1}{2i-1}\right)$.
-	      \begin{align*}
-		      \suma1n \left( \frac{1}{2(i+1)-1} - \frac{1}{2i-1}\right) =
-		      \suma1n \left(a_{i+1}- a_i \right) \igual{9i)}
-		      a_{n+1} - a_1 =
-		      \frac{1}{2(n+1)-1} - \frac{1}{2\cdot 1-1}
-	      \end{align*}
+        \subsubsection*{Auxiliar 1}
+        Calculamos la sugerencia dada
+        \begin{align*}
+          \frac{1}{2i-1} - \frac{1}{2i+1} & = \frac{2i+1 - (2i-1)}{(2i-1)(2i+1)} = \frac{2i+1 - 2i+1}{(2i-1)(2i+1)}= \frac{2}{(2i-1)(2i+1)} \\
+          \frac{2}{(2i-1)(2i+1)}          & = \frac{1}{2i-1} - \frac{1}{2i+1}                                                               \\
+          \frac{1}{(2i-1)(2i+1)}          & = \frac{1}{2} \left( \frac{1}{2i-1} - \frac{1}{2i+1} \right)
+        \end{align*}
+
+        \subsubsection*{Auxiliar 2}
+        Sea $ a_n = \frac{1}{2n-1}$, donde $n \en \naturales $. Queremos calcular $ \sumatoria{1}{n} \left(\frac{1}{2(i+1)-1} - \frac{1}{2i-1}\right)$.
+        \begin{align*}
+          \sumatoria{1}{n} \left( \frac{1}{2(i+1)-1} - \frac{1}{2i-1}\right) =
+          \sumatoria{1}{n} \left(a_{i+1}- a_i \right) \igual{9i)}
+          a_{n+1} - a_1 =
+          \frac{1}{2(n+1)-1} - \frac{1}{2\cdot 1-1}
+        \end{align*}
 \end{enumerate}
