--- a/7-guia/ejercicios-7-extra/ej-extra-5-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-5-7.tex
@@ -1,13 +1,13 @@
-\ejExtra
+\begin{enunciado}{\ejExtra}
 
-Sea $(f_n)_{(n\geq 1)}$ la sucesión de poliniomios en $\reales[X]$ definida como:
-$$
-  f_1 = X^5 + 3X^4 + 5X^3 + 11X^2 - 20 \ytext f_{n+1} =
-  (X + 2)^2 f'_n + 3 f_n, \text{ para cada } n \en \naturales.
-$$
-Probar que $-2$ es raíz doble de $f_n$ para todo $n \en \naturales$.
+  Sea $(f_n)_{(n\geq 1)}$ la sucesión de poliniomios en $\reales[X]$ definida como:
+  $$
+    f_1 = X^5 + 3X^4 + 5X^3 + 11X^2 - 20 \ytext f_{n+1} =
+    (X + 2)^2 f'_n + 3 f_n, \text{ para cada } n \en \naturales.
+  $$
+  Probar que $-2$ es raíz doble de $f_n$ para todo $n \en \naturales$.
 
-\separadorCorto
+\end{enunciado}
 
 No caer en la \red{\textit{trampilla}$^{\skull}$} de olvidar que para que una raíz de $f$ sea doble, i.e.  $\mult(-2;f) \red{\igual{!}} 2$
 debe ocurrir lo \textit{"obvio"}, $f(-2) = f'(-2) = 0$ y también que $\red{f^{''}(-2) \distinto 0}$. Si olvidamos esto último
