--- a/7-guia/teoria-7/teoria-7.tex
+++ b/7-guia/teoria-7/teoria-7.tex
@@ -2,76 +2,85 @@
 \newcommand{\polGen}[1]{\sumatoria{i=0}{n} #1_i X^i}
 
 \begin{itemize}
-	\item \textit{Operaciones: }
-	      \begin{itemize}
-		      \item[$+:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \polGen{b}$\\
-		            $\entonces f + g = \sumatoria{i=0}{n} (a_i + b_i) X^i \en \K[X]$
-		      \item[$\cdot:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \sumatoria{j=0}{m} b_j X^j$\\
-		            $\entonces f \cdot g = \sumatoria{k=0}{n+m} (\sumatoria{i+j=k}{} a_i \cdot b_j) X^k \en \K[X]$
-	      \end{itemize}
-	\item $(\K[X],+,\cdot) \text{ es un anillo conmutativo } \to f\cdot(g+h) = f\cdot g + f\cdot h,\, \paratodo f,\,g,\,h \en \K[X]$
+  \item \textit{Operaciones: }
+        \begin{itemize}
+          \item[$+:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \polGen{b}$\\
+                $\entonces f + g = \sumatoria{i=0}{n} (a_i + b_i) X^i \en \K[X]$
+          \item[$\cdot:$] Sean $f,g \en \K[X]$ con $f = \polGen{a}$ y $g = \sumatoria{j=0}{m} b_j X^j$\\
+                $\entonces f \cdot g = \sumatoria{k=0}{n+m} (\sumatoria{i+j=k}{} a_i \cdot b_j) X^k \en \K[X]$
+        \end{itemize}
+  \item $(\K[X],+,\cdot) \text{ es un anillo conmutativo } \to f\cdot(g+h) = f\cdot g + f\cdot h,\, \paratodo f,\,g,\,h \en \K[X]$
 
-	\item \textit{Algoritmo de división}: $f,g \en \K[X]$ no nulos, existen únicos $q$ y $R \en \K[X]$ tal que $f = q\cdot g + R$
-            con $\gr(R) < \gr(f)$ o $R = 0$
+  \item \textit{Algoritmo de división}: $f,g \en \K[X]$ no nulos, existen únicos $q$ y $R \en \K[X]$ tal que $f = q\cdot g + R$
+        con $\gr(R) < \gr(f)$ o $R = 0$
 
-	\item $\alpha$ es raíz de $f \sisolosi X - \alpha \divideA f \sisolosi f = q \cdot ( X - \alpha)$
+  \item $\alpha$ es raíz de $f \sisolosi X - \alpha \divideA f \sisolosi f = q \cdot ( X - \alpha)$
 
-	\item \textit{Máximo común divisor: } Polinomio mónico de mayor grado que divide a ambos polinomios en $\K[X]$
-	      y vale el algoritmo de Euclides.
-	      \begin{itemize}
-		      \item $(f:g) \divideA f$ y $(f:g) \divideA g$
+  \item \textit{Máximo común divisor: } Polinomio mónico de mayor grado que divide a ambos polinomios en $\K[X]$
+        y vale el algoritmo de Euclides.
+        \begin{itemize}
+          \item $(f:g) \divideA f$ y $(f:g) \divideA g$
 
-		      \item $f = (f:g)\cdot k_f$ y $g = (f:g)\cdot k_g$ con $k_f$ y $k_g$ en $\K[X]$
+          \item $f = (f:g)\cdot k_f$ y $g = (f:g)\cdot k_g$ con $k_f$ y $k_g$ en $\K[X]$
 
-		      \item Dos polinomios son coprimos si $(f:g) = 1 \sisolosi f \distinto g$
-	      \end{itemize}
+          \item Dos polinomios son coprimos si $(f:g) = 1 \sisolosi f \distinto g$
+        \end{itemize}
 
-	\item \textit{Raíces múltiples: }\\
-	      Sea $f \en \K[x]$ no nulo, y sea $\alpha \en \K$. Se dice que:
-	      \begin{itemize}
-		      \item $\alpha$ es raíz \underline{múltiple} de $f \sii f = (x - \alpha)^2 q$ para algún $q \en \K[X]$
+  \item \textit{Raíces múltiples: }\\
+        Sea $f \en \K[x]$ no nulo, y sea $\alpha \en \K$. Se dice que:
+        \begin{itemize}
+          \item $\alpha$ es raíz \underline{múltiple} de $f \sii f = (x - \alpha)^2 q$ para algún $q \en \K[X]$
 
-		      \item $\alpha$ es raíz \underline{simple} de $f \sii x - \alpha \divideA f$ en $\K[X]$,
-		            pero $(X - \alpha)^2 \noDivide f$ en $\K[X] \sii f = (X - \alpha) q$
-		            para algún $q \en \K[X]$ tal que $q(\alpha) \distinto 0$.
+          \item $\alpha$ es raíz \underline{simple} de $f \sii x - \alpha \divideA f$ en $\K[X]$,
+                pero $(X - \alpha)^2 \noDivide f$ en $\K[X] \sii f = (X - \alpha) q$
+                para algún $q \en \K[X]$ tal que $q(\alpha) \distinto 0$.
 
-		      \item Sea $m \en \naturales_0$. Se dice que $\alpha$ es raíz de multiplicidad (exactamente)
-		            $m$ de $f$, y se nota $\mult(\alpha;f) = m \sisolosi (X - \alpha)^m \divideA f$,
-		            pero $(x - \alpha)^{m+1} \noDivide f$.\\
-		            O equivalentemente, $f = (X - \alpha)^m q$ con $q \en \K[X]$,
-		            pero $q(\alpha) \distinto 0$
+          \item Sea $m \en \naturales_0$. Se dice que $\alpha$ es raíz de multiplicidad (exactamente)
+                $m$ de $f$, y se nota $\mult(\alpha;f) = m \sisolosi (X - \alpha)^m \divideA f$,
+                pero $(x - \alpha)^{m+1} \noDivide f$.\\
+                O equivalentemente, $f = (X - \alpha)^m q$ con $q \en \K[X]$,
+                pero $q(\alpha) \distinto 0$
 
-            \item Sea $f \en \K[X]$ no nulo $\mult(\alpha; f) \leq \gr(f)$:
+          \item Sea $f \en \K[X]$ no nulo $\mult(\alpha; f) \leq \gr(f)$:
 
-		      \item Sean $f$, $g \en \K[X]$ no ambos nulos, y $\alpha \en \K
-			            \entonces f(\alpha) = f(\alpha) = 0 \sii (f:g)(\alpha) = 0$
-	      \end{itemize}
+          \item Sean $f$, $g \en \K[X]$ no ambos nulos, y $\alpha \en \K
+                  \entonces f(\alpha) = f(\alpha) = 0 \sii (f:g)(\alpha) = 0$
+        \end{itemize}
 
-	\item Vale que $\alpha$ es raíz múltiple de $f \sisolosi f(\alpha) = 0$ y $f'(\alpha) = 0 \sisolosi \alpha$
-	      es raíz de $(f:f'),\, X - \alpha \divideA (f:f')$
-	      \begin{itemize}
-		      \item $
-			            \mult(\alpha,f) = m
-			            \sisolosi
-			            f(\alpha) = 0$ y $\mult(\alpha;f') = m-1$
+  \item Vale que $\alpha$ es raíz múltiple de $f \sisolosi f(\alpha) = 0$ y $f'(\alpha) = 0 \sisolosi \alpha$
+        es raíz de $(f:f'),\, X - \alpha \divideA (f:f')$
+        \begin{itemize}
+          \item $
+                  \mult(\alpha,f) = m
+                  \sisolosi
+                  f(\alpha) = 0$ y $\mult(\alpha;f') = m-1$
 
-		      \item $\mult(\alpha;f) = m \sisolosi
-			            \llave{rl}{
-				            \mult(\alpha;f)\geq m     &
-				            \llaveInv{c}{
-					            f(\alpha) = 0\\
-					            \vdots\\
-                                f^{(m-1)}(\alpha) = 0
-				            }\\
-				            \mult(\alpha;f) = m     &
-				            \llaveInv{c}{
-                              f^{(m)}\alpha) \distinto 0
-				            }
-			            }$
-	      \end{itemize}
+          \item $\mult(\alpha;f) = m \sisolosi
+                  \llave{rl}{
+                    \mult(\alpha;f)\geq m     &
+                    \llaveInv{c}{
+                      f(\alpha) = 0\\
+                      \vdots\\
+                      f^{(m-1)}(\alpha) = 0
+                    }\\
+                    \mult(\alpha;f) = m     &
+                    \llaveInv{c}{
+                      f^{(m)}\alpha) \distinto 0
+                    }
+                  }$
+        \end{itemize}
 
-          \textit{Cantidad de raíces: }
-          \begin{itemize}
-            \item 
-          \end{itemize}
+\item \hypertarget{7-teoria:irreducibles}{Polinomios irreducibles}:\par
+        Sea $f \en K[X]$
+        \begin{itemize}
+          \item
+                Se dice que f es \textit{irreducible} en $K[X]$ cuando $f \not\en K$ y los únicos divisores de $f$ son de la forma
+                $g = c$ o $g = cf$ para algún $c \en K^\times$. O sea $f$ tiene únicamente dos divisores mónicos (distintos), que son
+                1 y $\frac{f}{\cp(f)}$
+
+          \item
+                Se dice que $f$ es \textit{reducible} en $K[X]$ cuando $f \not\en K$ y $f$ tiene algún divisor $g \en K[X]$ con
+                $g \distinto c$ y $g \distinto cf,\, \paratodo c \en K^{\times}$, es decir $f$ tiene algún divisor $g \en K[X]$ (no nulo
+                por definición) con $0 < \gr(g) < \gr(f).$
+        \end{itemize}
 \end{itemize}
